sort.pancake.BasicPancake.scala.error
Compilation error:
BasicPancake:11: error: type mismatch;
 found   : String("      ok")
 required: Int
    print (b ="      ok")
              ^